2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp|h: Remove EO::GetStackTrace, never used.

	* debug.cpp|h: Move MAX_STACK_FRAMES into debug.cpp so that a change
	doesn't require a rebuild of *everything*.

2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: In the parent destroyed handler, call
	SetParent (NULL) instead of clearing the field directly so that
	we don't miss any other related cleanup that must be done.

2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp|h: Add a SetParentSafe method that managed code
	can use. This method differs from the normal SetParent method in that
	it listens for the parent's Destroyed event and calls SetParent (NULL)
	This is a lot easier than keeping track in managed code of objects we
	must call SetParent (NULL) on.

	* control.cpp|h:
	* frameworkelement.cpp|h: Make sure we clear out the parent on objects
	we call SetParent on whenever the object changes or when we're disposed.

	* cbinding.cpp|h: Regenerated.

2009-11-30  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: Revert 147089 as I didn't mean to commit it
	  yet.

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: Remove the fast path to avoid walking up the
	  tree if the hint flag is already set as it breaks drt 549.

2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* uielement.cpp: SetIsAttached: check the surface for null before using
	it, we may end up here during shutdown, in which case there is no
	surface anymore.

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Fix an issue where if we found no
	  dirty elements while searching the DIRTY_MEASURE_HINT path,
	  we could exit early (without doing an Arrange or Size path).

2009-11-27  Alan McGovern  <amcgovern@novell.com>

	* uielement.cpp: If an item which has a value set for
	  LastRenderSize is added to the tree, ensure that the dirty