@@ -1,3 +1,15 @@
+2009-11-30  Alan McGovern  <amcgovern@novell.com>
+
+	* uielement.cpp: When propagating hint flags up the visual
+	  tree, we can only safely stop walking up the tree if the
+	  visual parent already has the hint flag set.
+
+	* frameworkelement.cpp: If an element invalidates its Measure
+	  or Arrange inside a LayoutUpdated handler, we should do
+	  another measure/arrange pass immediately. Also add in a
+	  debug sanity check to ensure that there are no dirty
+	  elements left over when we've finished updating.
+
 2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* dependencyobject.cpp|h: Remove EO::GetStackTrace, never used.
